about greetingPic fixed

--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
             <img src="../pics/about/profilepic.gif" class='img-fluid bg-transparent' alt="Pete's profile picture.">
         </div>
 
-        <div id="myIntro" class="myArticles container-fluid">
+        <div id="myIntro" class="myArticles container-fluid mt-5">
             <h2>Hello,</h2>
             <p>My name is <span class="menloRegular" style="color:chocolate">Pete</span> and I <span>grew up in the
                     90s</span>. I fondly remember multi-sided die, Bulletin Board Systems, Sierra games, and AOL CDs.
