welcome cbp init

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -106,7 +106,8 @@
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkWelcome');
-        navbarCBPRemove();
+        initCBPLogo();
+        // navbarCBPRemove();
         setTimeout(injectWelcomeBackground, 2850);
         setTimeout(injectWelcome, 3000);
         setTimeout(initScrollMagic, 3100);
