--- a/pages/resume.html
+++ b/pages/resume.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-sm-4 text-center my-2">
                     <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif"
-                            class=' img-fluid imgWhiteBg py-1 img-round text-center mx-auto mb-3'
+                            class=' img-fluid imgWhiteBg py-1 img-round text-center mx-auto mb-3' style="height:6.5rem;width:6.5rem;"
                             alt="University of Delware Shield Logo."></a>
                     <h5 class="menloRegular">Bachelor's Degree</h5>
                     <h6><a href="https://www.bio.udel.edu/" target="_blank">Biological Sciences</a></h6>
