proj wordsm res upd

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -71,7 +71,7 @@
                 <img src="../pics/projects/lenovaIncLogo.gif" class="card-img-top pt-4 mx-auto"
                     alt="LeNova, Inc. animated logo" style="width:12rem;border-radius:0">
                 <div class="card-body">
-                    <h5 class="card-title">Engineering Business Website</h5>
+                    <h5 class="card-title">Engineering Firm Website</h5>
                     <p class="card-text">The <a href="https://www.lenovainc.com" target="_blank">LeNova, Inc.</a> website was developed in <span class="text-white">collaboration</span> with the <span class="text-white">owners</span> to support <span class="text-white">business expansion</span> initiatives.</p>
                     <p class="card-text">This project used vanilla HTML, CSS, and JavaScript and includes <span class="text-white">custom</span> CSS <span class="text-white">animations</span>.</p>
                     <a id='lenovaincDemo' href="https://www.lenovainc.com/" class="btn btn-secondary mx-auto btnDark" target="_blank">Visit Site</a>
