contrib about upd

--- a/pages/about.html
+++ b/pages/about.html
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div id='githubContributions' class="my-5 carousel slide carousel-fade" data-bs-ride="carousel">
+        <!-- <div id='githubContributions' class="my-5 carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="5000">
                     <a href="https://github.com/codeTrackLift" target="_blank">
@@ -102,6 +102,12 @@
                     </a>
                 </div>
             </div>
+        </div> -->
+
+        <div id='githubContributions' class="container-fluid text-center">
+            <a href="https://github.com/codeTrackLift" target="_blank">
+                <img src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
+            </a>
         </div>
 
         <div id="personal" class="myArticles container-fluid">
@@ -119,7 +125,7 @@
             </div>
             <div class='row'>
                 <p class="col-sm-4"><span style="color:darkorchid">Fitness & nutrition</span> are my other life
-                    passions. I am also a certified personal trainer.</p>
+                    passions. I am also a certified personal trainer (hobby).</p>
                 <p class="col-sm-7"><span style="color:chocolate">Dogs > cats</span>, but I like any animal that does
                     not try to eat me. In my spare time, I pick up heavy things and put them back down. Some call it
                     <span>'resistance training</span>.<span>'</span></p>
