--- a/pages/resume.html
+++ b/pages/resume.html
@@ -62,10 +62,12 @@
         </section>
 
         <section class="container-fluid text-end mt-4 w-75" style="max-width: 900px">
-                <a href="../pics/resumeByPete.pdf" download>
-                    <span class="textShadowBlack text-white fst-italic opacity-50">resume<span style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
-                    <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow' alt="Download cloud icon">
-                </a>
+            <a href="../pics/resumeByPete.pdf" download>
+                <span class="textShadowBlack text-white fst-italic opacity-50">resume<span
+                        style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
+                <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow'
+                    alt="Download cloud icon">
+            </a>
         </section>
 
         <div id="education" class="myArticles container-fluid">
@@ -83,8 +85,8 @@
                 </div>
                 <div class="col-sm-4 text-center my-2">
                     <a href="https://www.udel.edu/" target="_blank"><img src="../pics/about/udel_shield1743.gif"
-                            class=' img-fluid imgWhiteBg py-1 img-round text-center mx-auto mb-3' style="height:6.5rem;width:6.5rem;"
-                            alt="University of Delware Shield Logo."></a>
+                            class=' img-fluid imgWhiteBg py-1 img-round text-center mx-auto mb-3'
+                            style="height:6.5rem;width:6.5rem;" alt="University of Delware Shield Logo."></a>
                     <h5 class="menloRegular">Bachelor's Degree</h5>
                     <h6><a href="https://www.bio.udel.edu/" target="_blank">Biological Sciences</a></h6>
                     <div class="dateSection">
@@ -92,28 +94,37 @@
                     </div>
                 </div>
                 <div class="my-auto row text-center">
-                    <h5 class="mt-4 menloRegular">Self-Taught</h5>
-                    <div class="col-sm-5">
-                        <a href="https://www.freecodecamp.org" target="_blank"><img
+                    <div class="row d-flex justify-content-evenly my-2">
+                        <h5 class="col-sm-6 menloRegular">Self-Taught</h5>
+                        <div class="col-sm-6">
+                            <a href="https://www.freecodecamp.org" target="_blank"><img
                                 src="../pics/about/fcc_primary_large.png" alt="freeCodeCamp.org Logo"
-                                class="img-fluid img-rect m-3"></a>
-                        <br>
-                        <a href="https://www.theodinproject.com" target="_blank"><img
-                                src="../pics/about/theOdinProject.png" alt="The Odin Project Logo"
-                                class="img-fluid img-rect mb-4"></a>
-                    </div>
-                    <div class="col-sm-7 text-center my-auto">
-                        <h6><a
-                                href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures">JavaScript
-                                Algorithms & Data Structures</a></h6>
-                        <div class="dateSection text-center mb-2">
-                            <p>Jan 2022</p>
+                                class="img-fluid img-rect"></a>
                         </div>
-                        <h6><a
-                                href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design">Responsive
-                                Web Design</a></h6>
-                        <div class="dateSection text-center">
-                            <p>Dec 2021</p>
+                    </div>
+                    <div class="row text-center my-auto">
+                        <div class="col-sm-4 my-auto">
+                            <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/front-end-development-libraries"
+                                    target="_blank">Front End Development Libraries</a></h6>
+                            <div class="dateSection text-center mb-2">
+                                <p>Apr 2022</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-auto">
+                            <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/javascript-algorithms-and-data-structures"
+                                    target="_blank">JavaScript
+                                    Algorithms & Data Structures</a></h6>
+                            <div class="dateSection text-center mb-2">
+                                <p>Jan 2022</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4 my-auto">
+                            <h6><a href="https://www.freecodecamp.org/certification/fcc8f0d41dc-edb2-4060-b4b4-e59ed022c75c/responsive-web-design"
+                                    target="_blank">Responsive
+                                    Web Design</a></h6>
+                            <div class="dateSection text-center">
+                                <p>Dec 2021</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +134,8 @@
         <div id='techStack' class="myArticles container-fluid">
             <h1 class="text-center mb-4">Technology Stack</h1>
             <div class="row">
-                <img src="../pics/about/html5_logo.gif" class='col-sm-2 imgWhiteBg img-fluid img-round' alt="HTML5 Logo.">
+                <img src="../pics/about/html5_logo.gif" class='col-sm-2 imgWhiteBg img-fluid img-round'
+                    alt="HTML5 Logo.">
                 <img src="../pics/about/css3_logo.gif" class='col-sm-2 imgWhiteBg img-fluid img-round' alt="CSS3 Logo.">
                 <img src="../pics/about/javascript_logo.gif" class='col-sm-2 imgWhiteBg img-fluid img-round'
                     alt="JavaScript Logo.">
@@ -135,11 +147,11 @@
                     alt="Visual Studio Code Logo.">
                 <img src="../pics/about/bootstrap-logo.svg" class='py-3 col-sm-2 img-fluid img-square'
                     alt="Bootstrap Logo.">
-                <img src="../pics/about/jest_logo.gif" class='py-3 col-sm-2 img-fluid img-square'
-                    alt="Jest Logo.">
+                <img src="../pics/about/jest_logo.gif" class='py-3 col-sm-2 img-fluid img-square' alt="Jest Logo.">
             </div>
             <div class="container-fluid text-center">
-                <img class='img-fluid' src="../pics/about/mernStackTrans.png" style='width:20rem;' alt="Mongo DB Express NodeJS ReactJS technology stack.">
+                <img class='img-fluid' src="../pics/about/mernStackTrans.png" style='width:20rem;'
+                    alt="Mongo DB Express NodeJS ReactJS technology stack.">
             </div>
         </div>
 
@@ -184,9 +196,11 @@
         </div>
 
         <div class="container-fluid text-center" style="max-width:640px;">
-            <h3 class="text-silver textShadowBlack fst-italic">Pharmaceuticals was serious business, but we knew how to have fun too!</h3>
+            <h3 class="text-silver textShadowBlack fst-italic">Pharmaceuticals was serious business, but we knew how to
+                have fun too!</h3>
             <img id='yodaJim' src="../pics/about/yodaJim.jpg" class="img-fluid my-4" alt="Yoda Jim.">
-            <p class="textShadowBlack">Meet one of my mentors, "<span class="fst-italic">Yoda Jim</span>" <span class="text-gray">(and a sampling of my Photoshop work)</span>.</p>
+            <p class="textShadowBlack">Meet one of my mentors, "<span class="fst-italic">Yoda Jim</span>" <span
+                    class="text-gray">(and a sampling of my Photoshop work)</span>.</p>
         </div>
 
         <div class="container-fluid myArticles">
@@ -345,10 +359,8 @@
             <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo
                 projects and see my progression. <span class="text-white">Need help with a project?</span></h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
-                <a id='buttonProjects' href="../pages/projects.html"
-                    class="btn btn-secondary btnDark">Projects</a>
-                <a id='buttonContact' href="../pages/contact.html"
-                    class="btn btn-secondary ">Contact Me</a>
+                <a id='buttonProjects' href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
+                <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary ">Contact Me</a>
             </div>
         </div>
 
