--- a/pages/resume.html
+++ b/pages/resume.html
@@ -93,7 +93,7 @@
                         <p id="hiddenText">Dec 2001</p>
                     </div>
                 </div>
-                <div class="my-auto row text-center">
+                <div class="my-auto text-center">
                     <div class="row d-flex justify-content-evenly my-2">
                         <h5 class="col-sm-6 menloRegular">Self-Taught</h5>
                         <div class="col-sm-6">
