--- a/pages/projects.html
+++ b/pages/projects.html
@@ -185,6 +185,38 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width:18rem;">
+                <img src="../pics/projects/pomodoroClock.jpg" class="card-img-top px-5 pt-2" alt="Pomodoro Clock React App">
+                <div class="card-body">
+                    <h5 class="card-title">Pomodoro Clock</h5>
+                    <p class="card-text">My second <span class="text-white">React App</span>, also part of <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a>'s Front End Development Libraries Certification.</p>
+                    <p class="card-text">The <span class="text-white">useState() hook</span> was used for this project instead of Class constructors.</p>
+                    <div class="btnContainer">
+                        <a id='pomodoroClockDemo' href="https://codetracklift.github.io/pomodoro/" class="btn btn-secondary"
+                            target="_blank">Try
+                            Demo</a>
+                        <a id='pomodoroClockRepo' href="https://github.com/codeTrackLift/pomodoro" class="btn btn-secondary btnDark"
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card col-sm-4" style="width:18rem;">
+                <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top px-5 pt-4" alt="Markdown Previewer React App">
+                <div class="card-body">
+                    <h5 class="card-title">Markdown Previewer</h5>
+                    <p class="card-text">My first <span class="text-white">React App</span>, this developed during Bootcamp Week 9 with React 18 using <span class="text-white">Class constructors</span> and <span class="text-white">props</span>.</p>
+                    <p class="card-text">This project was part of the <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a> Front End Development Libraries Certification.</p>
+                    <div class="btnContainer">
+                        <a id='markdownPreviewerDemo' href="https://codetracklift.github.io/markdown-previewer/" class="btn btn-secondary"
+                            target="_blank">Try
+                            Demo</a>
+                        <a id='markdownPreviewerRepo' href="https://github.com/codeTrackLift/markdown-previewer" class="btn btn-secondary btnDark"
+                            target="'_blank"><img src="../pics/contact/GitHub-Mark-64px.png"> GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card col-sm-4" style="width:18rem;">
                 <img src="../pics/projects/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image"
                     style="height:10rem;">
                 <div class="card-body">
