--- a/pages/projects.html
+++ b/pages/projects.html
@@ -185,7 +185,7 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/pomodoroClock.jpg" class="card-img-top px-5 pt-2" alt="Pomodoro Clock React App">
+                <img src="../pics/projects/pomodoroClock.jpg" class="card-img-top" alt="Pomodoro Clock React App">
                 <div class="card-body">
                     <h5 class="card-title">Pomodoro Clock</h5>
                     <p class="card-text">My second <span class="text-white">React App</span>, also part of <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a>'s Front End Development Libraries Certification.</p>
@@ -201,7 +201,7 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top px-5 pt-4" alt="Markdown Previewer React App">
+                <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top pt-4" alt="Markdown Previewer React App">
                 <div class="card-body">
                     <h5 class="card-title">Markdown Previewer</h5>
                     <p class="card-text">My first <span class="text-white">React App</span>, this developed during Bootcamp Week 9 with React 18 using <span class="text-white">Class constructors</span> and <span class="text-white">props</span>.</p>
