--- a/pages/projects.html
+++ b/pages/projects.html
@@ -185,7 +185,7 @@
         <div class="myProjects row container-fluid justify-content-center">
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/pomodoroClock.jpg" class="card-img-top" alt="Pomodoro Clock React App">
+                <img src="../pics/projects/pomodoroClock.jpg" style='width:12rem;' class="card-img-top m-auto" alt="Pomodoro Clock React App">
                 <div class="card-body">
                     <h5 class="card-title">Pomodoro Clock</h5>
                     <p class="card-text">My second <span class="text-white">React App</span>, also part of <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a>'s Front End Development Libraries Certification.</p>
