--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name='description' content='codeByPete Pete Chu Web Developer Software Developer Portfolio'>
+    <meta name='description' content='codeByPete | Software Developer Portfolio | Pete Chu | Full Stack MERN Developer'>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P18XGH56KT"></script>
