--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
         </section>
 
         <div class="container-fluid myArticles">
-            <p class="text-gray text-center mb-5">/* myCodingJourney started in Dec, 2021; more projects are in development... */</p>
+            <p class="menloRegular text-gray text-center mb-5">/* myCodingJourney started in Dec, 2021; more projects are in development... */</p>
             <h3>Deployed Business Websites</h3>
         </div>
 
