--- a/pages/about.html
+++ b/pages/about.html
@@ -120,10 +120,10 @@
                 </div>
                 <img src="../pics/about/peteSwitch.jpg" class='col-sm-4 img-fluid img-rect my-auto px-0'
                     alt="Pete selfie with a shiba inu named Switch.">
-                <img src="../pics/about/peteLaFitness.jpg" class='col-sm-4 img-fluid img-rect bg-transparent px-0'
+                <img src="../pics/about/peteLaFitness.jpg" class='mb-4 col-sm-4 img-fluid img-rect bg-transparent px-0'
                     alt="Pete gym selfie.">
             </div>
-            <div class='row'>
+            <div class='row '>
                 <p class="col-sm-4"><span style="color:darkorchid">Fitness & nutrition</span> are my other life
                     passions. I am also a certified personal trainer (hobby).</p>
                 <p class="col-sm-7"><span style="color:chocolate">Dogs > cats</span>, but I like any animal that does
