--- a/pages/projects.html
+++ b/pages/projects.html
@@ -116,9 +116,10 @@
                     <h5 class="card-title">To-Do Dashboard</h5>
                     <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                             Bootcamp</span> assignment started as a simple to-do list.</p>
-                    <p class="card-text">Customizations: <span>fetching</span> temperature data from an <span>API</span>
+                    <p class="card-text">Customizations: <span>fetching API data</span>
                         with <span>error handling</span>, tasks are
-                        retained in <span>local storage</span> and persist through a reload</p>
+                        retained in <span>local storage</span> and persist through a reload,see <a
+                        href="../pages/blog.html#blog7Button">blog[7]</a></p>
                     <div class="btnContainer">
                         <a id='todoDemo' href="https://codetracklift.github.io/todo/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
