proj greet msg h6

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
         </section>
 
         <div class="container-fluid myArticles">
-            <p class="menloRegular text-gray text-center mb-5">/* myCodingJourney started in Dec, 2021; more projects are in development... */</p>
+            <h6 class="menloRegular text-gray text-center mb-5">/* myCodingJourney started in Dec, 2021. Please visit again, more projects are in development... */</h6>
             <h3>Deployed Business Websites</h3>
         </div>
 
