--- a/pages/about.html
+++ b/pages/about.html
@@ -89,23 +89,8 @@
             </div>
         </div>
 
-        <!-- <div id='githubContributions' class="my-5 carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="5000">
-                    <a href="https://github.com/codeTrackLift" target="_blank">
-                        <img src="../pics/about/githubContributions_100Days.jpg" class='img-fluid h-100' style="width: 90%" alt="GitHub contribution">
-                    </a>
-                </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                    <a href="https://github.com/codeTrackLift" target="_blank">
-                        <img src="../pics/about/githubContributions.png" class='img-fluid h-100' style="width: 90%" alt="GitHub contribution">
-                    </a>
-                </div>
-            </div>
-        </div> -->
-
         <div id='githubContributions' class="container-fluid text-center">
-            <a href="https://github.com/codeTrackLift" target="_blank">
+            <a href="https://skyline.github.com/codeTrackLift/2022" target="_blank">
                 <img src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
             </a>
         </div>
