--- a/pages/projects.html
+++ b/pages/projects.html
@@ -258,10 +258,10 @@
             </div>
 
             <div class="card col-sm-4" style="width:18rem;">
-                <img src="../pics/projects/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image"
+                <img src="../pics/projects/drumCalc.gif" class="img-fluid mx-auto" alt="Calculator image"
                     style="height:10rem;">
                 <div class="card-body">
-                    <h5 class="card-title">JavaScript Calculator</h5>
+                    <h5 class="card-title">Drum Set Calculator</h5>
                     <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a
                             href="https://www.theodinproject.com/" target="_blank">The Odin Project</a> Foundations
                         course.
